# Final_SC_Review

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_registry.csv
configs/: ablation_large_pool.yaml  best_v2.yaml  budgets_maxout.yaml  default.yaml  default_v2.yaml  default_val.yaml  default_val_optimized.yaml  deployment_high_recall.yaml  deployment_low_fpr.yaml  deployment_targets.yaml  final_test_eval.yaml  hpo_inference.yaml  hpo_inference_exhaustive.yaml  hpo_inference_v2.yaml  hpo_retriever_only.yaml  hpo_training.yaml  hpo_training_maxout.yaml  hpo_training_v2.yaml  locked_best_config.yaml  locked_best_stageC_reranker.yaml  locked_best_stageE_deploy.yaml  model_lists.yaml  reranker_extended.yaml  reranker_hybrid.yaml  reranker_with_no_evidence.yaml  retriever_finetune.yaml  retriever_zoo.yaml  sota_baselines.yaml  stageB_best.yaml  training_data.yaml
docs/: MODEL_INVENTORY.md  PLAN.md  metric_policy.md  optimization.md  optimization_plan_baseline.md  retriever_comparison_results.md  retriever_lists.md
notebook/: sc_pipeline_no_postprocessing.ipynb  sc_post_processing.ipynb  sc_post_processing_executed.ipynb  sc_reranker_pipeline_no_postProcessing.ipynb  sc_retrieval_pipeline.ipynb
outputs/: baseline_default_test.json  baseline_default_test.queries.csv  baseline_default_val.json  baseline_default_val.queries.csv  baseline_v2_test.queries.csv
reports/: sc_retrieval_research.md  sc_retrieval_research_v2.md
scripts/: analyze_diagnostics.py  assess_no_evidence_model.py  audit_pushed_results.py  build_groundtruth.py  build_multiquery_templates.py  (+82 more)
(+199 files in other folders)
